Prevent scrolling on mobile chrome

--- a/priv/static/script/webinterface.css
+++ b/priv/static/script/webinterface.css
@@ -11,6 +11,7 @@ body {
   margin: 0;
   padding: 0;
   background: #402D2F;
+  overflow-y: hidden;
 }
 
 #weather-control {
